[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "cvi"
authors = [{name = "Sasha Petrenko", email = "sap625@mst.edu"}]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://cluster-validity-indices.readthedocs.io"

[tool.bumpver]
# current_version = "2022.1001-alpha"
# version_pattern = "YYYY.BUILD[-TAG]"
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

