[metadata]
name = cvi
version = 0.1.0-alpha.1
author = Sasha Petrenko
author_email = sap@mst.com
description = A Python package for both batch and incremental cluster validity indices.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AP6YC/cvi
project_urls =
    Bug Tracker = https://github.com/AP6YC/cvi/issues
    Documentation = https://cluster-validity-indices.readthedocs.io/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    tqdm
    scikit-learn
    pandas

[options.packages.find]
where = src

[flake8]
exclude =
    .git,
    __pycache__,
    old,
    build,
    dist,
    _dev
